# rp2040

./: .gitignore  CMakeLists.txt  freeRTOS_import.cmake  picoSDK_import.cmake  readme.MD
blink/: CMakeLists.txt  aux.c  main.c
calc-pi/: CMakeLists.txt  FreeRTOSConfig.h  main.c
hello-world/: CMakeLists.txt  main.c
hello-world-dual/: CMakeLists.txt  FreeRTOSConfig.h  main.c
i2cScan/: CMakeLists.txt  main.cpp
neopixel/: CMakeLists.txt  main.cpp  neopixel.cpp  neopixel.h  ws2812.pio
tempC/: CMakeLists.txt  main.c
usblink/: CMakeLists.txt  main.c
